# Agent

./: .coverage  .gitignore  AGENTS.md  ARCHITECTURE.md  BACKEND.md  DEVELOPMENT.md  FRONTEND.md  LLM_PROVIDERS_README.md  Makefile  README.md  README_API.md  README_DOCKER.md  README_INFRA_DB_AND_EVENTS.md  TESTPLAN.md  TRAEFIK_ROUTING_README.md  agents.md  config.toml  coverage.xml  demo_new_tools.py  devctl.mjs  docker-compose.yml  docker-status.bat  docker-status.ps1  docker-status.sh  ds.bat  env.example  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.ps1  setup.sh  start_ui.sh  stop.ps1  stop.sh  test_event_system.py  test_llm_providers.py  (+3 more)
.cursor/: agent_rulez.mdc
__agent/: main.py
adapter/: README.md
agent/: Dockerfile  __init__.py  requirements.txt
backend/: ARCHITECTURE_MIGRATION.md  ARCHITECTURE_OVERVIEW.md  MIGRATION_STATUS.md  WEBSOCKET_DEBUG_STATUS.md  analyze-html-structure.ts  debug-bassoverse.html  debug-das-viertel.html  debug-elysia.html  debug-html.ts  debug-kinker.html  events-2025-12-04.csv  package.json  results-2025-12-04.json  settings.json.example  test-clubs-debug.ts  test-conversation-system.ts  test-event-crawler.ts  test-tracking.ts  tool-registry-state.json  toolbox-config.json  tsconfig.json  view-results.ts
configforge/: README.md  main.py  setup.py
data/: benchmark_data.json  existenz_eulersche_zahl.md  exponential_derivative_1.md  mila.txt  paper.md
devops/: docker-compose.yml
docs/: DEVELOPMENT.md
frontend/: README.md  index.html  package.json  (+1 more)
(+390 files in other folders)
