[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-dev-tool"
version = "0.1.0"
description = "Development tool for Agent project control and management"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
agent = "devops.dev_tool.cli:main"
a = "devops.dev_tool.cli:main"

[tool.setuptools]
packages = ["devops.dev_tool"]

[tool.setuptools.package-data]
"*" = ["*.md"]

